<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.android.qwhiz.MainActivity">

    <TextView android:id="@+id/questionNumber"
        android:text="@string/questionNo1"
        style="@style/questionNoP"/>

    <LinearLayout android:id="@+id/buttons"
        style="@style/buttonLayoutP">
        <Button
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/back"
            android:background="@drawable/button"
            android:onClick="lastQuestion"
            style="@style/buttonBottomP"/>
        <Button android:id="@+id/submit"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/submit"
            android:background="@drawable/button"
            android:onClick="submitQuestion"
            style="@style/buttonBottomP"/>
    </LinearLayout>

    <android.support.v7.widget.CardView android:id="@+id/questionCard1"
    android:layout_below="@id/questionNumber"
    android:layout_above="@+id/buttons"
    style="@style/cardViewP" >
        <LinearLayout
            style="@style/cardViewLinear">
            <TextView
                android:text="@string/topic"
                style="@style/topicP"/>
            <ImageView
                style="@style/image"
                android:src="@drawable/image1"
                android:contentDescription="@string/contentDescription"/>
            <TextView
                android:text="@string/question1"
                style="@style/questionTextP"/>
            <View
                style="@style/lineP">
            </View>
            <RadioGroup android:id="@+id/question1Group"
                style="@style/radioGroupP">
                <RadioButton android:id="@+id/q1o1"
                    android:text="@string/option1Q1"
                    style="@style/radioButtonP" />
                <RadioButton android:id="@+id/q1o2"
                    android:text="@string/option2Q1"
                    style="@style/radioButtonP"/>
                <RadioButton android:id="@+id/q1o3"
                    android:text="@string/answerQ1"
                    style="@style/radioButtonP" />
                <RadioButton android:id="@+id/q1o4"
                    android:text="@string/option3Q1"
                    style="@style/radioButtonP" />
            </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView android:id="@+id/questionCard2"
        android:layout_below="@id/questionNumber"
        android:layout_above="@+id/buttons"
        style="@style/cardViewP" >
        <LinearLayout
            style="@style/cardViewLinear">
            <TextView
                android:text="@string/topic"
                style="@style/topicP"/>
            <ImageView
                style="@style/image"
                android:src="@drawable/image2"
                android:contentDescription="@string/contentDescription"/>
            <TextView
                android:text="@string/question2"
                style="@style/questionTextP"/>
            <View
                style="@style/lineP" >
            </View>
            <EditText android:id="@+id/editAnswer"
                android:hint="@string/hint"
                style="@style/editTextP" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView android:id="@+id/questionCard3"
        android:layout_below="@id/questionNumber"
        android:layout_above="@+id/buttons"
        style="@style/cardViewP" >
        <LinearLayout
            style="@style/cardViewLinear" >
            <TextView
                android:text="@string/topic"
                style="@style/topicP" />
            <ImageView
                style="@style/image"
                android:src="@drawable/image3"
                android:contentDescription="@string/contentDescription"/>
            <TextView
                android:text="@string/question3"
                style="@style/questionTextP" />
            <View
                style="@style/lineP">
            </View>
            <RadioGroup android:id="@+id/question3Group"
                style="@style/radioGroupP" >
                <RadioButton android:id="@+id/q3o1"
                    android:text="@string/option1Q3"
                    style="@style/radioButtonP" />
                <RadioButton android:id="@+id/q3o2"
                    android:text="@string/option2Q3"
                    style="@style/radioButtonP" />
                <RadioButton android:id="@+id/q3o3"
                    android:text="@string/option3Q3"
                    style="@style/radioButtonP" />
                <RadioButton android:id="@+id/q3o4"
                    android:text="@string/answerQ3"
                    style="@style/radioButtonP" />
            </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView android:id="@+id/questionCard4"
        android:layout_below="@id/questionNumber"
        android:layout_above="@+id/buttons"
        style="@style/cardViewP" >
        <LinearLayout
            style="@style/cardViewLinear" >
            <TextView
                android:text="@string/topic"
                style="@style/topicP" />
            <ImageView
                style="@style/image"
                android:src="@drawable/image4"
                android:contentDescription="@string/contentDescription"/>
            <TextView
                android:text="@string/question4"
                style="@style/questionTextP" />
            <View
                style="@style/lineP">
            </View>
            <LinearLayout
                style="@style/checkLinearP" >
                <CheckBox android:id="@+id/q4o1"
                    android:text="@string/answer1Q4"
                    style="@style/checkBoxP" />
                <CheckBox android:id="@+id/q4o2"
                    android:text="@string/answer2Q4"
                    style="@style/checkBoxP" />
            </LinearLayout>
            <LinearLayout
                style="@style/checkLinearP" >
                <CheckBox android:id="@+id/q4o3"
                    android:text="@string/answer3Q4"
                    style="@style/checkBoxP" />
                <CheckBox android:id="@+id/q4o4"
                    android:text="@string/answer4Q4"
                    style="@style/checkBoxP" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
