<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.android.qwhiz.CompleteActivity">

    <TextView android:id="@+id/questionNumber"
        android:text="@string/youreDone"
        style="@style/youreDoneP"/>

    <LinearLayout android:id="@+id/buttons"
        style="@style/buttonLayoutP">
        <Button android:id="@+id/tryAgain"
            android:text="@string/tryAgain"
            android:background="@drawable/button"
            android:onClick="tryAgain"
            style="@style/buttonBottomP"/>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_below="@id/questionNumber"
        android:layout_above="@+id/buttons"
        style="@style/cardViewP" >
        <LinearLayout
            style="@style/cardViewLinear">
            <ImageView android:id="@+id/sheldonImage"
                style="@style/image" />
            <TextView android:id="@+id/resultText"
                android:text="@string/scoreFail"
                style="@style/questionTextP"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>